syntax = "proto3";

package bannerpb;

option go_package = "retarget/pkg/proto/banner;bannerpb";

message Banner {
  string title = 1;
  string content = 2;
  string description = 3;
  string link = 4;
  string ownerID = 5;
  string max_price = 6;
}

message Empty {}

message BannerRequest {
  int64 id = 1;
}

service BannerService {
  rpc SendBanner(Banner) returns (Empty);
  rpc GetRandomBanner(Empty) returns (Banner);  // Новый метод без параметров
  rpc GetBannerByID(BannerRequest) returns (Banner);
}